app/style/panel/panel.less
/*
 * Wire
 * Copyright (C) 2018 Wire Swiss GmbH
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program. If not, see http://www.gnu.org/licenses/.
 *
 */

.panel {
  overflow: hidden;

  &__page {
    display: flex;
    flex-direction: column;

    &--visible {
      opacity: 1;
      height: 100%;
    }

    &:not(&--visible) {
      opacity: 0;
    }
  }

  &__action-item {
    height: 48px;
    border-bottom: 1px solid fade(@graphite-dark, 8%);
    margin: 0 20px;
    display: flex;
    align-items: center;
    cursor: pointer;
    user-select: none;

    &__icon {
      width: 44px;
      display: flex;
      path {
        fill: @graphite-dark;
      }
    }

    &__text,
    &__status {
      font-size: 14px;
      font-weight: 400;
    }

    &__text {
      flex-grow: 1;
    }

    &__status {
      color: fade(@graphite-dark, 40%);
      justify-self: flex-end;
    }

    disclose-icon {
      display: flex;
      margin-left: 12px;
      path {
        fill: fade(@graphite-dark, 40%);
      }
    }
  }

  &__header {
    height: @content-title-bar-height;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 16px;

    path {
      fill: @graphite-dark;
    }

    &__title {
      font-size: 12px;
      font-weight: @font-weight-bold;
      text-transform: uppercase;
    }
  }
}

